<resources>
    <string name="app_name">"Math Upiicsa"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Math UPIICSA</string>

    <!-- Strings related to login -->
    <string name="txt_login_usuario">Usuario</string>
    <string name="txt_login_password">Contraseña</string>
    <string name="btn_loging_acceder">Acceder</string>
    <string name="error_invalid_usuario">El usuario es invalido</string>
    <string name="error_invalid_password">La contraseña es invalida</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Campo requerido</string>

    <!-- Strings related to fragment_registro_alumno -->
    <string name="txt_registro_id_boleta">Boleta</string>
    <string name="txt_registro_nombre">Nombre</string>
    <string name="txt_registro_apellido_paterno">Apellido Paterno</string>
    <string name="txt_registro_apellido_materno">Apellido Materno</string>
    <string name="spn_registro_licenciatura">Licenciatura</string>
    <string name="btn_registro_Registrar">Registrar</string>

    <!--Catalog fragment-->
    <string name="catalog_search_hit">Buscar por nombre   </string>
    <string name="title_activity_zoom_image">ZoomImage</string>


    <!-- Strings related to login -->
    <string name="tv_loging_bienvenida">Bienvenido</string>
    <string name="btn_loging_bienvenida_finalizar">Finalizar</string>
    <string name="title_activity_busqueda_horario">Busqueda Horario</string>


    <!--      Array de Spinners     -->

    <!-- Arreglo Strings "Carreras" related to fragment_registro_alumno-->
    <string-array name="Carreras">
        <item></item>
        <item>Administración Industrial</item>
        <item>Ingeniería Industrial</item>
        <item>Ingenieria en Transporte</item>
        <item>Ciencias de la informática</item>
        <item>Ingeniería en Informática</item>
    </string-array>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_actividad">actividad</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
