<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="20dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:id="@+id/upiicsa_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_vertical"
                android:gravity="center_vertical|center|center_horizontal"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_registro_id_boleta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_registro_id_boleta"
                        android:inputType="numberSigned"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center_vertical"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_registro_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_registro_nombre"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center_vertical"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_registro_apellido_paterno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_registro_apellido_paterno"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center_vertical" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_registro_apellido_materno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_registro_apellido_materno"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center_vertical" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spn_registro_licenciatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"/>



                <Button
                    android:id="@+id/btn_registro_Registrar"
                    style="@style/Widget.Button.Standar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/btn_registro_Registrar"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

</android.support.v7.widget.CardView>